# neural-symbolic-ai-2f28-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper/: OUTLINE.md
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/figures/: method_overview.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: digit_grounding.tex  main_results.tex  ood_regions.tex  statistical_tests.tex
papers/: README.md
papers/pages/: 1502.05698_babi_towards_ai_complete_question_answering_manifest.txt  1612.06890_clevr_diagnostic_dataset_compositional_visual_reasoning_manifest.txt  1805.10872_deepproblog_neural_probabilistic_logic_programming_manifest.txt  1904.11694_neural_logic_machines_manifest.txt  1904.12584_neuro_symbolic_concept_learner_manifest.txt  1908.06177_clutrr_diagnostic_benchmark_inductive_reasoning_text_manifest.txt  2006.13155_logical_neural_networks_manifest.txt  2012.13635_logic_tensor_networks_manifest.txt  2106.12574_deepstochlog_neural_stochastic_logic_programming_manifest.txt  (+9 more)
src/: addmnist_experiment.py  analyze_results.py
(+24 files in other folders)
