[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=4.0.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.21.0",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pypdf>=6.14.2",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
